Multiple changes and fixes
- remove jsonString from all entities and database tables
- replace java.net.HttpURLConnection with java.net.http.HttpClient
- fix the excessive string replacement in 'javax.net.ssl.trustStore'